src/test/ui/issue-28568.stderr
error[E0119]: conflicting implementations of trait `std::ops::Drop` for type `MyStruct`:
  --> $DIR/issue-28568.rs:17:1
   |
13 | impl Drop for MyStruct {
   | ---------------------- first implementation here
...
17 | impl Drop for MyStruct {
   | ^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MyStruct`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
